Upgrade to from Java 8 to 21